tests/ucc/type/bad/ptr-vs-float.c
int main(void)
{
    int *a = (void*)0;
    float b = 0;

    a = b;

    return 0;
}
